automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Text Formatting</title>
 </head>
 <body>
-  <h1>Title</h1>
-<h2>subtitle</h2>
-<h3></h3>
+  <h1>Hello World</h1>
+<h2>'A Love Story'</h2>
+<h3>'Chapter 1'</h3>
 
 <p>
   <em>Hello World!</em>
